# alice-eeg-ml

./: .gitignore  Basic Pipeline.ipynb  MANIFEST.in  README.md  Using pipeline on new data.ipynb  data.py  features.py  setup.cfg
alice_ml/: features.py  models.py
alice_ml/pretrained/: lr_flag_brain.joblib  lr_flag_eyes.joblib  scaler.joblib
alice_ml/tests/: test_features.py
