[metadata]
name = alice-ml
version = 0.1.3
author = Alexander Ledovsky
description = ALICE - Automated Labeling of Independent Components for EEG
long_desription = file: readme.md
url = https://github.com/ledovsky/alice-eeg-ml

[options]
install_requires =
    mne >=0.23.4
python_requires = >=3.7
packages = find:
include_package_data = true
